// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemTitle should render button title 1`] = `
<div
  className={undefined}
>
  <button
    aria-describedby={42}
    className="my-title btn btn-link"
    disabled={false}
    id="title"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="link"
    type="button"
  >
    Hello world
  </button>
</div>
`;

exports[`ItemTitle should render icon 1`] = `
<div
  className={undefined}
>
  <i
    aria-hidden="true"
    className="fa fa-file-excel-o tc-list-icon"
    title={null}
  />
  <span
    aria-describedby={42}
    className="my-title"
    id={undefined}
    onBlur={[Function]}
    onClick={null}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    Hello world
  </span>
</div>
`;

exports[`ItemTitle should render input title 1`] = `
<div
  className={undefined}
>
  <input
    autoFocus={true}
    id="title"
    onBlur={[Function]}
    onKeyUp={[Function]}
  />
</div>
`;

exports[`ItemTitle should render text title 1`] = `
<div
  className={undefined}
>
  <span
    aria-describedby={42}
    className="my-title"
    id="title"
    onBlur={[Function]}
    onClick={null}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    Hello world
  </span>
</div>
`;
